fixtures/frontend/milestone-2/invalid/gate-predicate-not-bool/main.aivi
type User = { email: Text }

val seed:User = { email: "ada@example.com" }

val maybeUser =
    seed
     ?|> .email
